--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "flow-bin": "^0.47.0",
     "react-scripts": "1.0.7"
   },
   "dependencies": {
