refactored product recommendations and Flow

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,13 @@
 {
-    "extends": "airbnb",
+    "extends": [
+      "airbnb",
+      "plugin:flowtype/recommended"
+    ],
     "plugins": [
-        "react",
-        "jsx-a11y",
-        "import"
+      "react",
+      "jsx-a11y",
+      "import",
+      "flowtype"
     ],
     "rules": {
       "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
