--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "eslint": "^3.19.0",
     "glamor": "^2.20.25",
     "glamorous": "^3.21.0",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "react": "^15.5.4",
-    "react-code-split-component": "^0.3.1",
+    "react-code-split-component": "^0.4.0",
     "react-dom": "^15.5.4",
     "react-helmet": "^5.1.3",
     "react-redux": "^5.0.5",
