--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^4.1.2",
     "glamor": "^2.20.25",
     "glamorous": "^3.21.0",
+    "history": "^4.6.3",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "react": "^15.5.4",
@@ -26,6 +27,7 @@
     "react-helmet": "^5.1.3",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
+    "react-router-redux": "next",
     "redux": "^3.7.0",
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.15.3"
