--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,5 +11,9 @@
     ],
     "rules": {
       "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+    },
+    "globals": {
+      "window": true,
+      "document": true
     }
 }
