--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
     },
     "globals": {
       "window": true,
-      "document": true
+      "document": true,
+      "navigator": true
     }
 }
