--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "glamor": "^2.20.25",
     "glamorous": "^3.21.0",
     "history": "^4.6.3",
+    "localforage": "^1.5.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "react": "^15.5.4",
