--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,12 +1,17 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Nendohouse",
+  "name": "Nendohouse",
   "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "192x192",
-      "type": "image/png"
-    }
+      {
+          "src": "/android-chrome-192x192.png",
+          "sizes": "192x192",
+          "type": "image/png"
+      },
+      {
+          "src": "/favicon-gede.jpg",
+          "sizes": "751x751",
+          "type": "image/png"
+      }
   ],
   "start_url": "./index.html",
   "display": "standalone",
